@@ -35,7 +35,6 @@
         <module>sensorwebclient-ags</module>
         <module>sensorwebclient-hydro</module>
         <module>sensorwebclient-webapp</module>
-        <module>restful-timeseries-webapp</module>
         <!--        Rely on the last stable version of xml-pdf-format -->
         <!--		<module>xml-pdf-format</module>-->
     </modules>
@@ -45,17 +44,17 @@
             <dependency>
                 <groupId>org.n52.sensorweb</groupId>
                 <artifactId>timeseries-io</artifactId>
-                <version>${timeseries.api.version}</version>
+                <version>${series.api.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.n52.sensorweb</groupId>
                 <artifactId>timeseries-spi</artifactId>
-                <version>${timeseries.api.version}</version>
+                <version>${series.api.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.n52.sensorweb</groupId>
                 <artifactId>timeseries-web</artifactId>
-                <version>${timeseries.api.version}</version>
+                <version>${series.api.version}</version>
             </dependency>
 
             <dependency>
@@ -507,6 +506,7 @@
                 <filtering>true</filtering>
             </resource>
         </resources>
+        
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -516,125 +516,15 @@
                 </plugin>
 
                 <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>gwt-maven-plugin</artifactId>
-                    <version>${gwt.version}</version>
+                    <groupId>org.jasig.maven</groupId>
+                    <artifactId>maven-notice-plugin</artifactId>
+                    <version>1.0.6</version>
                     <configuration>
-                        <module>${gwt.compile.module}</module>
-                        <runTarget>Client.jsp</runTarget>
-                        <compileSourcesArtifacts>
-                            <artifact>org.n52.sensorweb:sensorwebclient-ext</artifact>
-                            <artifact>org.n52.sensorweb:sensorwebclient-sos-rpc</artifact>
-                            <artifact>org.n52.sensorweb:sensorwebclient-sos-shared</artifact>
-                            <artifact>org.n52.sensorweb:timeseries-io</artifact>
-                            <artifact>org.n52.sensorweb:sensorwebclient-ses-rpc</artifact>
-                            <artifact>org.n52.sensorweb:sensorwebclient-ses-shared</artifact>
-                            <artifact>org.n52.sensorweb:sensorwebclient-ui</artifact>
-                        </compileSourcesArtifacts>
-                        <style>${gwt.compile.style}</style>
-                        <logLevel>${gwt.compile.level}</logLevel>
-                        <draftCompile>${gwt.compile.draft}</draftCompile>
-                        <compileReport>${gwt.compile.report}</compileReport>
-                        <optimizationLevel>${gwt.compile.optimization.level}</optimizationLevel>
-                        <extraJvmArgs>-XX:MaxPermSize=256m -Xmx512m</extraJvmArgs>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>compile</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-
-                <plugin>
-                    <!-- see http://wiki.eclipse.org/M2E_plugin_execution_not_covered -->
-                    <groupId>org.eclipse.m2e</groupId>
-                    <artifactId>lifecycle-mapping</artifactId>
-                    <version>1.0.0</version>
-                    <configuration>
-                        <lifecycleMappingMetadata>
-                            <pluginExecutions>
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-                                        <groupId>com.samaxes.maven</groupId>
-                                        <artifactId>minify-maven-plugin</artifactId>
-                                        <versionRange>[1.5.2,)</versionRange>
-                                        <goals>
-                                            <goal>minify</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <ignore />
-                                    </action>
-                                </pluginExecution>
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-                                        <groupId>org.codehaus.mojo</groupId>
-                                        <artifactId>lesscss-maven-plugin</artifactId>
-                                        <versionRange>[1.0-beta-3,)</versionRange>
-                                        <goals>
-                                            <goal>compile</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <ignore />
-                                    </action>
-                                </pluginExecution>
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-                                        <groupId>org.apache.maven.plugins</groupId>
-                                        <artifactId>maven-dependency-plugin</artifactId>
-                                        <versionRange>[2.8,)</versionRange>
-                                        <goals>
-                                            <goal>unpack</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <ignore />
-                                    </action>
-                                </pluginExecution>
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-                                        <groupId>com.mycila</groupId>
-                                        <artifactId>license-maven-plugin</artifactId>
-                                        <versionRange>[2.2,)</versionRange>
-                                        <goals>
-                                            <goal>check</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <ignore />
-                                    </action>
-                                </pluginExecution>
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-                                        <groupId>org.codehaus.mojo</groupId>
-                                        <artifactId>license-maven-plugin</artifactId>
-                                        <versionRange>[1.5,)</versionRange>
-                                        <goals>
-                                            <goal>add-third-party</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <ignore />
-                                    </action>
-                                </pluginExecution>
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-                                        <groupId>org.codehaus.groovy.maven</groupId>
-                                        <artifactId>gmaven-plugin</artifactId>
-                                        <versionRange>[1.0,)</versionRange>
-                                        <goals>
-                                            <goal>execute</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <ignore />
-                                    </action>
-                                </pluginExecution>
-                            </pluginExecutions>
-                        </lifecycleMappingMetadata>
+                        <noticeTemplate>misc/NOTICE.template</noticeTemplate>
+                        <licenseMapping>
+                            <param>http://52north.github.io/cdn/licenses/license-mappings.xml</param>
+                        </licenseMapping>
+                        <generateChildNotices>false</generateChildNotices>
                     </configuration>
                 </plugin>
 
@@ -652,7 +542,7 @@
 
                 <plugin>
                     <artifactId>maven-release-plugin</artifactId>
-                    <version>2.3.2</version>
+                    <version>2.5.3</version>
                     <configuration>
                         <preparationGoals>clean</preparationGoals>
                         <autoVersionSubmodules>true</autoVersionSubmodules>
@@ -699,7 +589,7 @@
             <plugin>
                 <groupId>pl.project13.maven</groupId>
                 <artifactId>git-commit-id-plugin</artifactId>
-                <version>2.1.10</version>
+                <version>2.1.13</version>
                 <executions>
                     <execution>
                         <id>git-commit-id</id>
@@ -710,7 +600,7 @@
                         <configuration>
                             <dateFormat>yyyy-MM-dd HH:mm:ssZ</dateFormat>
                             <gitDescribe>
-                                Faster to get just branch if skip = true
+                                <!--Faster to get just branch if skip = true-->
                                 <skip>false</skip>
                             </gitDescribe>
 
@@ -728,7 +618,7 @@
             <plugin>
                 <groupId>com.mycila</groupId>
                 <artifactId>license-maven-plugin</artifactId>
-                <version>2.2</version>
+                <version>2.11</version>
                 <configuration>
                     <header>misc/52N_license-header.txt</header>
                     <properties>
@@ -765,14 +655,6 @@
             <plugin>
                 <groupId>org.jasig.maven</groupId>
                 <artifactId>maven-notice-plugin</artifactId>
-                <version>1.0.6</version>
-                <configuration>
-                    <noticeTemplate>misc/NOTICE.template</noticeTemplate>
-                    <licenseMapping>
-                        <param>http://52north.github.io/cdn/licenses/license-mappings.xml</param>
-                    </licenseMapping>
-                    <generateChildNotices>false</generateChildNotices>
-                </configuration>
                 <inherited>false</inherited>
                 <executions>
                     <execution>
@@ -787,27 +669,11 @@
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-eclipse-plugin</artifactId>
-                <version>2.9</version>
-                <executions>
-                    <execution>
-                        <phase>!test</phase>
-                        <configuration>
-                            <sourceExcludes>
-                                <sourceExclude>**/logback-test.xml</sourceExclude>
-                            </sourceExcludes>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>${java.source.version}</source>
+                    <target>${java.compiler.version}</target>
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
                     <compilerArgument>-Xlint:all</compilerArgument>
@@ -815,7 +681,7 @@
                     <maxmem>512m</maxmem>
                 </configuration>
             </plugin>
-
+            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -834,6 +700,7 @@
                     </execution>
                 </executions>
             </plugin>
+            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
@@ -853,38 +720,6 @@
     </build>
 
     <profiles>
-
-        <profile>
-            <id>no-gwt</id>
-            <activation>
-                <property>
-                    <name>no-gwt</name>
-                </property>
-            </activation>
-            <properties>
-                <gwt.compiler.skip>true</gwt.compiler.skip>
-            </properties>
-        </profile>
-
-        <profile>
-            <id>debug</id>
-            <activation>
-                <property>
-                    <name>debug</name>
-                </property>
-            </activation>
-            <properties>
-                <!-- Compilation settings -->
-                <gwt.compile.level>INFO</gwt.compile.level>
-                <gwt.compile.style>PRETTY</gwt.compile.style>
-                <gwt.compile.report>true</gwt.compile.report>
-                <gwt.compile.draft>true</gwt.compile.draft>
-                <gwt.compile.optimization.level>0</gwt.compile.optimization.level>
-                <gwt.compile.module>org.n52.SensorWebClient_debug</gwt.compile.module>
-                <!-- is FF27+ devmode plugin dead?! https://code.google.com/p/google-web-toolkit/issues/detail?id=8553  -->
-                <gwt.user.agent>gecko1_8</gwt.user.agent>
-            </properties>
-        </profile>
 
         <profile>
             <id>env-example</id>
@@ -998,27 +833,21 @@
     </profiles>
 
     <properties>
-        <!-- Compilation default settings -->
-        <gwt.compile.level>INFO</gwt.compile.level>
-        <gwt.compile.style>OBF</gwt.compile.style>
-        <gwt.compile.report>true</gwt.compile.report>
-        <gwt.compile.draft>false</gwt.compile.draft>
-        <gwt.compile.optimization.level>9</gwt.compile.optimization.level>
-        <gwt.compile.module>org.n52.SensorWebClient</gwt.compile.module>
-
-        <dev.mode>false</dev.mode>
+        <java.source.version>1.7</java.source.version>
+        <java.compiler.version>1.7</java.compiler.version>
+        
         <gwt.version>2.6.1</gwt.version>
-        <slf4j.version>1.7.2</slf4j.version>
-        <logback.version>1.0.11</logback.version>
-        <jackson.version>2.2.2</jackson.version>
         <smartgwt.version>3.1</smartgwt.version>
+        <slf4j.version>1.7.21</slf4j.version>
+        <logback.version>1.1.7</logback.version>
+        <jackson.version>2.7.5</jackson.version>
         <geotools.version>8.5</geotools.version>
         <oxf.version>2.0.0-alpha.3.3</oxf.version>
         <hamcrest.version>1.3</hamcrest.version>
-        <timeseries.api.version>1.6.0</timeseries.api.version>
+        <series.api.version>1.6.0</series.api.version>
         <hibernate.version>3.5.0-Final</hibernate.version>
         <n52.xml.commons.version>2.0.0</n52.xml.commons.version>
-        <org.springframework.version>3.2.0.RELEASE</org.springframework.version>
+        <org.springframework.version>3.2.17.RELEASE</org.springframework.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <sensorwebclient.webapp.name>${project.artifactId}-${project.version}</sensorwebclient.webapp.name>
@@ -1130,6 +959,6 @@
         <connection>scm:git:git://github.com/52North/SensorWebClient.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/52North/SensorWebClient.git</developerConnection>
         <url>https://github.com/52North/SensorWebClient</url>
-      <tag>sensorwebclient-3.3.0-rc.3-SNAPSHOT</tag>
-  </scm>
+        <tag>sensorwebclient-3.3.0-rc.3-SNAPSHOT</tag>
+    </scm>
 </project>
